--- a/gene-network/src/main/frontend/package.json
+++ b/gene-network/src/main/frontend/package.json
@@ -30,6 +30,7 @@
     "babel-loader": "^6.2.10",
     "babel-plugin-istanbul": "^3.1.2",
     "babel-plugin-transform-runtime": "^6.22.0",
+    "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
@@ -63,6 +64,7 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "0.0.26",
     "karma-webpack": "^2.0.2",
+    "lodash": "^4.17.4",
     "lolex": "^1.5.2",
     "mocha": "^3.2.0",
     "opn": "^4.0.2",
