--- a/gene-network/src/main/frontend/package.json
+++ b/gene-network/src/main/frontend/package.json
@@ -9,6 +9,7 @@
     "build": "node build/build.js",
     "test": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
     "test:watch": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --watch",
+    "test:debug": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js -i --watch",
     "lint": "eslint --ext .js,.vue src test/unit/specs",
     "lint:fix": "eslint --ext .js,.vue src test/unit/specs"
   },
@@ -57,6 +58,7 @@
     "http-proxy-middleware": "^0.17.3",
     "inject-loader": "^2.0.1",
     "karma": "^1.4.1",
+    "karma-chrome-launcher": "^2.1.1",
     "karma-coverage": "^1.1.1",
     "karma-mocha": "^1.3.0",
     "karma-phantomjs-launcher": "^1.0.2",
@@ -72,7 +74,7 @@
     "phantomjs-prebuilt": "^2.1.14",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
-    "sinon": "^1.17.7",
+    "sinon": "^2.2.0",
     "sinon-chai": "^2.8.0",
     "standard": "^10.0.0",
     "testdouble": "^1.11.1",
