--- a/gene-network/src/main/frontend/package.json
+++ b/gene-network/src/main/frontend/package.json
@@ -14,7 +14,9 @@
     "lint:fix": "eslint --ext .js,.vue src test/unit/specs"
   },
   "dependencies": {
+    "base64-js": "^1.2.0",
     "bootstrap-vue": "^0.14.0",
+    "text-encoding": "^0.6.4",
     "to-csv": "^0.1.1"
   },
   "devDependencies": {
