--- a/gene-network/pom.xml
+++ b/gene-network/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.molgenis</groupId>
         <artifactId>molgenis-genetics</artifactId>
-        <version>1.0.0-GENETICS</version>
+        <version>1.1.0-GENETICS-SNAPSHOT</version>
     </parent>
     <artifactId>gene-network</artifactId>
 
